--- a/wp-content/themes/nuitdeboo-child/style.css
+++ b/wp-content/themes/nuitdeboo-child/style.css
@@ -7,5 +7,5 @@
  Template:     nuitdeboo-master
  Version:      1.0.0
  Tags:         responsive-layout, accessibility-ready
- Text Domain:  roots
+ Text Domain:  sage
 */
