Bower font awesome + css modifs

--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -4,6 +4,7 @@
 // bower:scss
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+@import "../../bower_components/font-awesome/scss/font-awesome.scss";
 
 @import "common/global";
 @import "components/buttons";
