--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import "../../bower_components/font-awesome/scss/font-awesome.scss";
 
 @import "common/global";
+@import "common/overload";
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
