Design first variables and parameters

--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
@@ -6,4 +6,7 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #27ae60;
+$brand-primary:         #36474f;
+$light-blue:            #0ab8d1;
+$link-color:            $light-blue;
+$heading-color:         #494849;
