Footer CSS and BS styling

--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
@@ -10,3 +10,4 @@ $brand-primary:         #36474f;
 $light-blue:            #0ab8d1;
 $link-color:            $light-blue;
 $heading-color:         #494849;
+$footer-bg:             #36474f;
