Footer container and padding top/bottom

--- a/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
@@ -1,6 +1,11 @@
 .content-info {
   background-color: $footer-bg;
 
+  .foot {
+    padding-top: 4em !important;
+    padding-bottom: 4em !important;
+  }
+
   h5 {
     font-size: ceil(($font-size-base * 1.15));
     color: #fff;
