basic social network integration

--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
@@ -11,3 +11,5 @@ $light-blue:            #0ab8d1;
 $link-color:            $light-blue;
 $heading-color:         #494849;
 $footer-bg:             #36474f;
+
+$gray-light:            #eeeeee;
