--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
@@ -11,3 +11,15 @@ $light-blue:            #0ab8d1;
 $link-color:            $light-blue;
 $heading-color:         #494849;
 $footer-bg:             #36474f;
+
+// Socials colors
+$social-twitter:        #60b1f2;
+$social-facebook:       #375697;
+$social-bambuser:       #444444;
+$social-youtube:        #c00000;
+$social-instagram:      #125685;
+$social-tumblr:         #36506b;
+$social-periscope:      #3e95b1;
+$social-snapchat:       #424242;
+$social-scoopit:        #93c749;
+$social-github:         #444444;
