--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "components/forms";
 @import "components/grid";
 @import "components/wp-classes";
+@import "components/mixins";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
