template and module styling

--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
@@ -1,4 +1,13 @@
 
 body {
-  background: #fbf9fa;
+  background: #36474f;
+  padding-top:100px;
+}
+
+.content {
+  margin:0 auto;
+  background: #fff;
+  max-width:80%;
+  padding-top:50px;
+  padding-bottom:30px;
 }
