--- a/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
@@ -10,4 +10,9 @@
     font-size: ceil(($font-size-base * 1.15));
     color: #fff;
   }
+
+  .contribute ul li img{
+  width:22px;
+  height:auto;
+  }
 }
