--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -3,6 +3,20 @@
   min-height: 650px;
   margin-left: -15px !important;
   margin-right: -15px !important;
+
+  h1 {
+    text-shadow: 0px 3px 4px rgba(0, 0, 0, 0.5);
+    filter: drop-shadow( 0px 3px 4px rgba(0,0,0,0.5));
+    -webkit-filter: drop-shadow( 0px 3px 4px rgba(0,0,0,0.5));
+    font-size: 98px;
+    max-height: 400px;
+
+    a{
+      color:#fff;
+
+    }
+  }
+
 }
 
 #socialhome {
@@ -24,13 +38,19 @@
       padding: 30px 45px;
     }
   }
+
+  button a {
+   color:#fff;
+  }
 }
 
 .socialonhome {
   margin-right: -15px;
   margin-left: -15px;
   border-bottom: 1px solid #eee;
-
+  .row{
+    background:#36474f;
+  }
   .socialsquare {
     background: #fff;
     height: 200px;
@@ -42,6 +62,7 @@
 
     &.nuitdebout {
       background: $brand-primary;
+       border-right: 1px solid #36474f;
       h3 {
         margin: 0 !important;
         padding: 0 !important;
@@ -88,4 +109,12 @@
       }
     }
   }
+}
+
+.free_iframe{
+    margin-left: -15px;
+    margin-right: -15px;
+    iframe{
+      border:none;
+    }
 }
