manifest html, iframe options, agenda options, misc

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -6,7 +6,7 @@
 
   h1 {
 
-    font-size: 98px;
+    font-size: 90px;
     max-height: 400px;
 
     a{
@@ -14,10 +14,17 @@
     }
   }
   #sentencerotate span {
-    font-size: 28px;
+    font-size: 17px;
     font-weight:bold;
     max-height: 200px;
     color:#fff;
+
+  }
+  #nuitdeboutdate{
+    font-size: 19px;
+    color:#fff;
+    padding-top:120px;
+    padding-bottom:20px;
 
   }
 
