--- a/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_header.scss
@@ -1,25 +1,130 @@
+.navbar-nuitdebout {
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  background: white;
+  transition: all 0.3s ease;
+  &-fixed {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+    width: 100%;
+  }
+  &-logo {
+    width: 50px;
+  }
+  &-container {
+    display: flex;
+    height: 70px;
+    align-items: center;
+  }
+  &-pusher {
+    flex: 1 1 auto;
+  }
+  &-item {
+    flex: 0 1 auto;
+    cursor: pointer;
+    padding: 0 10px;
+  }
+  &-search {
+    flex: 0 1 300px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 10px;
+    position: relative;
+    &-btn {
+      line-height: 40px;
+      color: #E6E6E6;
+      border: none;
+      background: transparent;
+      position: absolute;
+      right: 14px;
+      top: -2px;
+      z-index: 1;
+    }
+    &-input {
+      flex: 0 1 300px;
+      transition: all 0.15s ease;
+      line-height: 40px;
+      font-weight: lighter;
+      color: #666666;
+      border: 1px solid #E6E6E6;
+      border-radius: 5px;
+      padding: 0 10px;
+      font-size: 14px;
+      outline: none;
+    }
+    &-input:focus  {
+      border: 1px solid #CCCCCC;
+    }
+  }
+  &-link {
+    color: #616668;
+    font-size: 14px;
+    &:hover {
+      color: #da552f;
+      text-decoration: none;
+    }
+  }
+  &-button {
+    margin-left: 10px;
+    padding: 0 20px;
+    /*border-radius: 20em;*/
+    line-height: 40px;
+    background-color: $brand-primary;
+    color: white;
+    font-size: 14px;
+    border: 2px solid $brand-primary;
 
-header{
+    &:hover {
+      color: white;
+      background: black;
+      border-color: darken(black, 10%);
+    }
+  }
+  &-dropdown-menu {
+    margin-top: 15px;
+    box-shadow: 1px 1px 4px #E6E6E6;
+    border-color: #E6E6E6;
+    li > a {
+      transition: color 0.3s ease;
+      font-weight: lighter !important;
+      color: #999999 !important;
+      font-size: 15px !important;
+      line-height: 22px !important;
+      padding: 10px 20px;
+      &:hover {
+        background: transparent !important;
+        color: black !important;
+      }
+      &.navbar-nuitdebout-button {
+        color: white !important;
+        margin-right: 7px;
+        &:hover {
+          background: black !important;
+        }
+      }
+    }
+    &:before {
+      content: ' ';
+      height: 10px;
+      width: 10px;
+      position: absolute;
+      right: 10px;
+      top: -6px;
+      background-color: white;
+      transform: rotate(45deg);
+      border-left: 1px solid #E6E6E6;
+      border-top: 1px solid #E6E6E6;
+    }
+  }
 
-}
-.navbar-fixed {
-  position: fixed;
-}
-
-.navbar-fixed nav {
-  background: rgba(255, 255, 255, 0.95);
-}
-
-.brand-logo,
-.navbar__logo {
-  height:48px;
-  width:40px;
-}
-
-.brand-logo {
-  margin-top: 8px;
-  margin-left: 10px;
-  margin-right: 10px;
+  hr {
+    height: 12px;
+    width: 1px;
+    background-color: rgba(0, 0, 0, 0.2);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 nav ul li {
@@ -43,3 +148,4 @@ nav ul li:hover a, nav ul li:active a, nav ul li:focus a, nav ul li.active a {
 nav ul li:hover, nav ul li:active, nav ul li:focus, nav ul li.active {
   background: none;
 }
+
