--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -1,31 +1,29 @@
 .homepagescreen {
-  background-repeat: no-repeat;
-  min-height: 650px;
-  margin-left: -15px !important;
-  margin-right: -15px !important;
-
   h1 {
 
-    font-size: 90px;
-    max-height: 400px;
+    font-size: 98px;
+    max-height: 300px;
 
     a{
       color:#fff;
     }
   }
   #sentencerotate span {
-    font-size: 17px;
+    font-size: 28px;
     font-weight:bold;
     max-height: 200px;
     color:#fff;
+  }
+  .nd_header__brand {
+    filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.5));
+    font-size: 98px;
+    max-height: 300px;
 
   }
-  #nuitdeboutdate{
-    font-size: 19px;
+  .banner-homepage {
+    padding: 7em 0;
+    text-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
     color:#fff;
-    padding-top:120px;
-    padding-bottom:20px;
-
   }
 
 }
@@ -44,11 +42,14 @@
   }
   .wrapper {
     .container-fluid {
-      margin-left: -15px;
-      margin-right: -15px;
       background: #fff;
       padding: 30px 45px;
     }
+  }
+
+  img.pull-left {
+    padding-right: 20px;
+    padding-bottom: 20px;
   }
 
   button a {
