--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_fonts.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_fonts.scss
@@ -10,3 +10,35 @@
   font-weight: bold;
   font-style: normal;
 }
+
+@font-face {
+    font-family: 'socialIcons';
+    src: url('../fonts/socialIcons.eot');
+    src: url('../fonts/socialIcons.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/socialIcons.woff') format('woff'),
+         url('../fonts/socialIcons.ttf') format('truetype'),
+         url('../fonts/socialIcons.svg#socialIcons') format('svg');
+
+    font-weight: normal;
+    font-style: normal;
+}
+[class*='ic-']:before{
+	display: inline-block;
+   font-family: 'socialIcons';
+   font-style: normal;
+   font-weight: normal;
+   line-height: 1;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale
+}
+.ic-facebook:before{content:'\0042';}
+.ic-github:before{content:'\0043';}
+.ic-instagram:before{content:'\0044';}
+.ic-periscope:before{content:'\0045';}
+.ic-scoopit:before{content:'\0046';}
+.ic-snapchat:before{content:'\0047';}
+.ic-tumblr:before{content:'\0048';}
+.ic-twitter:before{content:'\0049';}
+.ic-youtube:before{content:'\004a';}
+.ic-bambuser:before{content:'\004b';}
+.ic-reddit:before{content:'\004c';}
