markup </> fix, css , wrappers

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -57,7 +57,9 @@
   }
 }
 
-
+.iframe-container{
+  margin:20px auto;
+}
 .free_iframe{
     margin-left: -15px;
     margin-right: -15px;
@@ -65,3 +67,4 @@
       border:none;
     }
 }
+
