template, widget, insert..

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -80,7 +80,7 @@
     border: 0 !important;
   }
 
-  ul {
+  .container.ul {
     list-style-type: none;
     li {
       border-bottom: 1px solid $gray-lighter;
