--- a/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_footer.scss
@@ -1,4 +1,11 @@
 .content-info {
+.social-icons{
+    color: #fff;
+     font-size: 2em;
+
+}
+
+
   background-color: $footer-bg;
 
   .foot {
@@ -12,7 +19,7 @@
   }
 
   .contribute ul li img{
-  width:22px;
-  height:auto;
+    width:22px;
+    height:auto;
   }
 }
