--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
@@ -20,6 +20,35 @@ body {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+.padded-small{
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+.padded-left{
+    padding: 1em 2em;
+        font-weight: bold;
+}
+.padded-left-search{
+  form{
+   margin:0;
+    padding:0;
+  }
+  padding: 1em 2em;
+    border-left:2px solid $gray-lighter;
+  }
+
+
+.border-grey{
+  border-top:1px solid $gray-lighter;
+}
+
 .bg-grey {
   background: $gray-lighter;
+}
+.bg-dark {
+  background: $gray-dark;
+  color:#fff;
+}
+iframe{
+  overflow:hidden;
 }
