--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -39,7 +39,9 @@
     border: 0 !important;
   }
 }
-
+#participate h3{
+  color: $light-blue;
+}
 #manifesto,
 #participate,
 #rassemblements {
@@ -52,7 +54,9 @@
       padding: 30px 45px;
     }
   }
-
+  iframe{
+    border:none;
+  }
   img.pull-left {
     padding-right: 20px;
     padding-bottom: 20px;
