page global - page ville - reduce banner height

--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
@@ -16,6 +16,10 @@ body {
   padding-bottom: 3em;
 }
 
+.padded-top{
+  padding-top: 3em;
+}
+
 .padded-inside{
   padding-top: 1em;
   padding-bottom: 1em;
