--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_variables.scss
@@ -5,6 +5,10 @@ $icon-font-path:        "../fonts/";
 $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
+// Font-size and line-height
+$base-size: 14px;
+$base-height: 1.4;
+
 // Colors
 $brand-primary:         #36474f;
 $light-blue:            #0ab8d1;
