--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_overload.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_overload.scss
@@ -25,3 +25,7 @@ h2:first-letter {
     0 3px 0 0 $light-blue,  /* to create a bottom 3px high green line */
     inset 0 -1px 0 0 $light-blue; /* to create the top (1px) of the outline */
 }
+
+h2 {
+  margin-bottom: 20px;
+}
