fotter style and indent, heead og, page ville agenda

--- a/wp-content/themes/nuitdeboo-child/style.css
+++ b/wp-content/themes/nuitdeboo-child/style.css
@@ -1,11 +1,10 @@
 /*
  Theme Name:   Nuitdeboo Child
- Theme URI:    http://duke.fr/
- Description:  Roots Child Theme
- Author:       Duke
- Author URI:   http://duke.fr
- Template:     nuitdeboo-master
+ Theme URI:    https://github.com/nuitdebout
+ Description:  Nuitdebout theme - Roots Child Theme (https://roots.io/sage/)
+ Author:       NuitdeboutTheme
+ Author URI:   http://nuitdebout.fr
  Version:      1.0.0
- Tags:         responsive-layout, accessibility-ready
+ Tags:         responsive-layout, mulisites, accessibility-ready, nuitdebout
  Text Domain:  sage
 */
