custom title for page

--- a/wp-content/themes/nuitdeboo-child/style.css
+++ b/wp-content/themes/nuitdeboo-child/style.css
@@ -4,6 +4,7 @@
  Description:  Nuitdebout theme - Roots Child Theme (https://roots.io/sage/)
  Author:       NuitdeboutTheme
  Author URI:   http://nuitdebout.fr
+ Template:     nuitdeboo-master
  Version:      1.0.0
  Tags:         responsive-layout, mulisites, accessibility-ready, nuitdebout
  Text Domain:  sage
