--- a/wp-content/themes/nuitdeboo-child/style.css
+++ b/wp-content/themes/nuitdeboo-child/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:   Nuitdeboo Child
  Theme URI:    https://github.com/nuitdebout
- Description:  Nuitdebout theme - Roots Child Theme (https://roots.io/sage/)
+ Description:  Nuitdebout theme - Nuitdebout Team  : https://github.com/nuitdebout/wordpress/network/members - Duke (http://duke.fr) owni ex-team - Tom Wersinger - "Mex" "SuperDudu", .... -  Roots Child Theme (https://roots.io/sage/)
  Author:       NuitdeboutTheme
  Author URI:   http://nuitdebout.fr
  Template:     nuitdeboo-master
