--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/grid";
 @import "components/wp-classes";
 @import "components/mixins";
+@import "components/widgets";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
