Use rounded icons in header and footer.

--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/wp-classes";
 @import "components/mixins";
 @import "components/widgets";
+@import "components/social_icons";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
