banner fix, remove chat and wki from options, removed 'Commune' font on h2,h3

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -4,12 +4,12 @@
        color:#fff;
   }
   h1 {
-
-    font-size: 98px;
+    font-size: 125px;
     max-height: 250px;
-
-
+    color: #fff;
+    text-transform: uppercase;
   }
+
   h2{
     font-size: 3em;
     margin-bottom: 40px;
