--- a/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/common/_global.scss
@@ -48,6 +48,9 @@ body {
 .border-grey{
   border-top:1px solid $gray-lighter;
 }
+.border-grey-bottom{
+  border-bottom:1px solid $gray-lighter;
+}
 
 .bg-grey {
   background: $gray-lighter;
