Upgrade Debian to have PHP5.6
- Update Apache config.
- Update apt cookbook.

--- a/chef/cookbooks/nuitdebout/templates/default/vhost.conf.erb
+++ b/chef/cookbooks/nuitdebout/templates/default/vhost.conf.erb
@@ -12,8 +12,7 @@
     Options Indexes FollowSymLinks Includes
     AllowOverride FileInfo Options=All,MultiViews
     AllowOverride All
-    Order allow,deny
-    Allow from all
+    Require all granted
     EnableSendfile Off
   </Directory>
 
