Integration of title and section

--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "components/mixins";
 @import "components/widgets";
 @import "components/social_icons";
+@import "components/section";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
