Design agenda section.

--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import "common/global";
 @import "common/fonts";
 @import "common/overload";
+@import "components/agenda";
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
