--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_buttons.scss
@@ -23,3 +23,11 @@
     box-shadow: none;
   }
 }
+
+.primary-button {
+  @extend .btn;
+  @extend .btn-primary;
+  @extend .btn-lg;
+  text-transform: uppercase;
+  font-size: 14px;
+}
