--- a/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/widgets";
 @import "components/social_icons";
 @import "components/section";
+@import "components/list";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
