--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_section.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_section.scss
@@ -26,9 +26,11 @@
   .section__content {
     margin-right: auto;
     margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 
     width: 100%;
-    max-width: 750px;
+    max-width: 780px;
 
     font-size: 16px;
     p {
