widgets style and iframe fix

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -69,7 +69,12 @@
 }
 
 iframe {
-  border: none;
+  border:none;
+}
+.iframe-module{
+  iframe{
+    width:100%;
+  }
 }
 
 .page-template-page-ville {
