--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_widgets.css
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_widgets.css
@@ -2,7 +2,6 @@
     pointer-events: none;
     border:none; overflow:hidden; width:100%;
 }
-
 #widget-homepage-top, .post {
     ul{
         margin: 0;
@@ -17,8 +16,29 @@
         }
 
     }
-
     .post-date{
       text-align:right;
+    }
+    .widget_rss {
+       ul{
+        li{
+            border-bottom: 1px solid #eee;
+            padding: .5em 0;
+        }
+      }
+      .rss-widget-icon{
+          display: none;
+      }
+      h2 a {
+         color:$heading-color;
+         font-weight:bold;
+         font-size:.8em;
+      }
+      .rss-date {
+            float: right;
+            font-style: italic;
+            font-size: .9em;
+            color:$heading-color;
+      }
     }
 }
