style the rss feed

--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_mixins.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_mixins.scss
@@ -5,3 +5,15 @@
   -ms-transform: translateY(-$percent);
   transform: translateY(-$percent);
 }
+
+@mixin title-font {
+  text-align: center;
+  font-family: "Roboto";
+
+  &:first-letter {
+    box-shadow:
+    0 3px 0 -1px $light-blue, /* to indent the green bottom line with the same color as the background */
+    0 3px 0 0 $light-blue,  /* to create a bottom 3px high green line */
+    inset 0 -1px 0 0 $light-blue; /* to create the top (1px) of the outline */
+  }
+}
