--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -12,7 +12,7 @@
 
   h2{
     font-size: 3em;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
   #sentencerotate span {
     font-size: 28px;
@@ -32,6 +32,10 @@
     color:#fff;
   }
 
+}
+
+body.page .homepagescreen {
+    margin-bottom:2em;
 }
 
 #socialhome {
