social btn patch css

--- a/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/layouts/_posts.scss
@@ -1,14 +1,16 @@
 .share-btns{
   padding-top: 5px;
+   width:100%;
+  float: left;
   .wrap{
     display: inline-block;
-    float: left;
-    margin-right: 3px;
-    margin-top: 0;
-    padding-right: 1em;
+    margin-right: 13px;
+    margin-top: 0px;
+    padding-left: 1em;
     padding-top: 0;
     position: relative;
     visibility: initial;
+    float: left;
   }
 }
 
