section homepost style

--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_section.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_section.scss
@@ -25,7 +25,13 @@
     font-size: 16px;
     p {
       margin: 0 0 20px;
+
     }
+    p.byline{
+        margin: 0;
+        font-size:14px;
+    }
+
   }
   .section__content--center {
     text-align: center;
