--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_buttons.scss
@@ -8,29 +8,7 @@
   display: inline-block;
 
   a {
-    /* Rectangle 118: */
-    background: white;
-    border: 1px solid $gray-lighter;
-    border-radius: 16px;
-    padding: 0.5em 1em !important;
-    margin-bottom: 10px;
-    display: block;
-
-    transition: box-shadow .3s;
-
-    &:focus,
-    &:active,
-    &:hover {
-      background: $link-color;
-      border-color: $link-color;
-      color: white;
-      text-decoration: none;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    }
-
-    &:active {
-      box-shadow: none;
-    }
+    @include tag-link();
   }
 }
 
