integration of the article page

--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_mixins.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_mixins.scss
@@ -43,3 +43,11 @@
     box-shadow: none;
   }
 }
+
+@mixin container($max-width: 780px) {
+  @include container-fixed;
+
+  width: 100%;
+  max-width: $max-width;
+}
+
