--- a/wp-content/themes/nuitdeboo-child/assets/styles/components/_comments.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/components/_comments.scss
@@ -1,19 +1,92 @@
+.comment-reply-title,
+.comments h2 {
+  font-size: 30px;
+  font-family: "Roboto", serif;
+
+  color: $gray;
+  margin: 0;
+}
+
 .comment-list {
   @include list-unstyled;
+
+  padding-bottom: 50px;
+  border-bottom: 1px solid $gray-light;
+
+  .comment {
+    display: block;
+    width: 100%;
+
+    background-color: white;
+    border-radius: 5px;
+
+    border: none;
+
+    padding: 10px;
+    margin: 20px 0;
+
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.10), 0 1px 3px rgba(0, 0, 0, 0.16);
+
+    .comment-awaiting-moderation,
+    .comment-metadata time {
+      color: $gray-light;
+      margin: 0;
+    }
+
+    .comment-content {
+      margin: 7px 0;
+    }
+
+    .reply {
+      font-weight: bold;
+    }
+  }
 }
-.comment-list ol {
-  list-style: none;
+
+
+.comment-respond {
+  padding-top: 50px;
+  margin-bottom: 50px;
 }
-.comment-form p {
-  @extend .form-group;
+
+.comment-form {
+  @include make-row();
+
+  p {
+    @extend .form-group;
+    @include make-xs-column(12);
+  }
+
+  .comment-notes {
+    @extend .form-group;
+    color: $gray-light;
+  }
+
+  .comment-form-author,
+  .comment-form-email,
+  .comment-form-url {
+    @include make-md-column(4);
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="url"],
+  textarea {
+    @extend .form-control;
+
+    border: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.10), 0 1px 3px rgba(0, 0, 0, 0.16);
+  }
+
+  input[type="submit"] {
+    @extend .primary-button;
+  }
+
+  .form-submit {
+    text-align: center;
+
+    padding: 30px 0;
+  }
+
 }
-.comment-form input[type="text"],
-.comment-form input[type="email"],
-.comment-form input[type="url"],
-.comment-form textarea {
-  @extend .form-control;
-}
-.comment-form input[type="submit"] {
-  @extend .btn;
-  @extend .btn-primary;
-}
+
