Delete random cities, save space.
- Delete ACF fields to activate map.
- Activate map on main site only.
- Move button over map.

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -69,6 +69,16 @@
   }
 }
 
+#homepage-map {
+  position: relative;
+  .homepage-map__button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
+  }
+}
+
 iframe {
   border:none;
 }
