Group news into section.
- Use WP RSS Aggregator
- Use Facebook page widget
- Remove unused & dead code

--- a/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
+++ b/wp-content/themes/nuitdeboo-child/assets/styles/pages/_frontpage.scss
@@ -144,3 +144,19 @@ iframe {
   font-size: 18px;
   font-weight: bold;
 }
+
+.news-container {
+  h3 {
+    font-family: Roboto;
+  }
+  .news-container__rss {
+    .nav-links {
+      display: none;
+    }
+    .wprss-feed-meta {
+      .feed-source, .feed-date {
+        display: block;
+      }
+    }
+  }
+}
